# Aether-Cloud-Platform

./: .env.example  .gitignore  README.md  aether.sh  pyproject.toml
aether/: cli.py
airflow/dags/: acp_pipeline.py  acp_sanity.py  odin_pipeline.py
config/hive/: README.md
config/spark/: spark-defaults.conf
config/trino/etc/: node.properties
config/trino/etc/catalog/: lake.properties  raw.properties
config/trino/etc/hadoop/: core-site.xml
docker/: compose.yml
docker/airflow/: Dockerfile
docs/: CLI.md  DEVLOG.md  architecture.md  execution_templates.md
scripts/: bronze_to_silver.py  bronze_to_silver_odin.py  ingest_odin_bronze.py  setup_hive_libs.sh  silver_to_gold.py  silver_to_gold_odin.py  spark_write_iceberg.py  spark_write_parquet.py
scripts/sql/gold/odin/: carrier_delay_summary.sql
