[project]
name = "aether-cloud-platform"
version = "0.1.0"
description = "AETHER Cloud Platform (ACP) CLI"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
]

[project.scripts]
aether = "aether.cli:app"

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aether"]